fix(#177): resolve SonarQube issues